--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -71,7 +71,7 @@
                   </a>
                 </li>
                 <li class="nav-item my-auto ms-3 ms-lg-0">
-                  <a href="#" class="btn btn-sm  bg-gradient-primary  mb-0 me-1 mt-2 mt-md-0">
+                  <a href="#" class="btn btn-sm bg-gradient-success mb-0 me-1 mt-2 mt-md-0">
                     Login
                   </a>
                 </li>
@@ -205,137 +205,108 @@
     </div>
   </div>
 
-  <!-- <section id="Outer" class="grafik py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 grid-margin stretch-card">
-          <div class="card">
-            <div class="card-body">
-              <div class="clearfix">
-                <div class="row justify-content-between">
-                  <div class="col-md-6 pt-1">
-                    <h4 class="card-title float-left">Trend Report</h4>
-                  </div>
-                  <div class="col-md-4 mb-3">
-                    <select id="inputState" class="form-select judul">
-                      <option selected>Periode</option>
-                      <option>2020</option>
-                      <option>2021</option>
-                      <option>2022</option>
-                      <option>2023</option>
-                      <option>2024</option>
-                      <option>2025</option>
-                    </select>
-                  </div>
-                </div>
-                <div id="visit-sale-chart-legend" class="rounded-legend legend-horizontal legend-top-right float-right">
-                </div>
-              </div>
-              <canvas id="visit-sale-chart" class="mt-4"></canvas>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <script>
-    $(document).ready(function () {
-      $("#Outer").click(function () {
-        $("#btn").show(1000);
-      });
-    });
-  </script> -->
-
-  <section id="contact" class="add-padding border-top-color2 py-5">
+  <section id="contact" class="add-padding contact border-top-color2 py-5">
     <div class="container">
       <div class="row justify-content-between">
-        <h1 class="big-text fw-bold text-center">Contact</h1>
-        <div class="col-md-6 pt-2">
-          <div class="address d-flex">
-            <i class="fas fa-map-marker-alt pt-1"></i>
-            <p class="ms-3">
-              Jl. Widya Chandra VIII No.34, RT.3/RW.1, Senayan, Kec. Kebayoran Baru, Jakarta Selatan, Daerah Khusus
-              Ibukota Jakarta 12950, Indonesia
-            </p>
+        <h1 class="big-text fw-bold text-center mb-5">Contact</h1>
+        <div class="col-lg-5 d-flex align-items-stretch">
+          <div class="info">
+            <div class="address">
+              <i class="fas fa-map-marker-alt"></i>
+              <h4>Location:</h4>
+              <p>
+                Jl. Widya Chandra VIII No.34, RT.3/RW.1, Senayan, Kec. Kebayoran Baru, Jakarta
+                Selatan, Daerah Khusus
+                Ibukota Jakarta 12950, Indonesia
+              </p>
+            </div>
+
+            <div class="phone">
+              <i class="fas fa-phone-alt pt-1"></i>
+              <h4>Call:</h4>
+              <p>5712619, 5703300, 5268620, 5737389</p>
+            </div>
+
+            <div class="email">
+              <i class="fas fa-fax"></i>
+              <h4>fax:</h4>
+              <p>5253040, 5271378</p>
+            </div>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2030724.7581920903!2d106.812998!3d-6.229507!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f1b1255f96e9%3A0x54641615f62b0bd6!2sBadan%20Pengembangan%20Sumber%20Daya%20Manusia%20Industri%20(BPSDMI)%20Kemenperin!5e0!3m2!1sen!2sus!4v1685874338210!5m2!1sen!2sus"
+              width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
           </div>
-          <div class="telphone d-flex">
-            <i class="fas fa-phone-alt pt-1"></i>
-            <p class="ms-3">
-              5712619, 5703300, 5268620, 5737389
-            </p>
-          </div>
-          <div class="fax d-flex">
-            <i class="fas fa-fax pt-1"></i>
-            <p class="ms-3">
-              5253040, 5271378
-            </p>
-          </div>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d507681.1895480226!2d106.812998!3d-6.229507!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f1b1255f96e9%3A0x54641615f62b0bd6!2sBadan%20Pengembangan%20Sumber%20Daya%20Manusia%20Industri%20(BPSDMI)%20Kemenperin!5e0!3m2!1sen!2sus!4v1683634610855!5m2!1sen!2sus"
-            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
         </div>
-        <!--=== Contact Form ===-->
 
-        <form id="contact-form" class="col-md-6 pt-4 text-center" action="contact.php" method="post" novalidate>
-          <div class="form-group">
-            <label class="control-label" for="contact-name">Name</label>
-            <div class="controls">
-              <input id="contact-name" name="contactName" placeholder="Your name" class="form-control requiredField"
-                data-new-placeholder="Your name" type="text" data-error-empty="Please enter your name">
-              <i class="fa fa-user"></i>
+        <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+          <form action="forms/contact.php" method="post" role="form" class="php-email-form" id="contact-form">
+            <div class="form-group">
+              <label class="control-label" for="contact-name">Name</label>
+              <div class="controls">
+                <input id="contact-name" name="contactName" placeholder="Your name" class="form-control requiredField"
+                  data-new-placeholder="Your name" type="text" data-error-empty="Please enter your name">
+                <i class="fa fa-user"></i>
+              </div>
+            </div><!-- End name input -->
+            <div class="form-group">
+              <label class="control-label" for="contact-mail">Email</label>
+              <div class=" controls">
+                <input id="contact-mail" name="email" placeholder="Your email" class="form-control requiredField"
+                  data-new-placeholder="Your email" type="email" data-error-empty="Please enter your email"
+                  data-error-invalid="Invalid email address">
+                <i class="fa fa-envelope"></i>
+              </div>
+            </div><!-- End email input -->
+
+            <div class="form-group">
+              <label class="control-label" for="contact-message">Message</label>
+              <div class="controls">
+                <textarea id="contact-message" name="comments" placeholder="Your message"
+                  class="form-control requiredField" data-new-placeholder="Your message" rows="6"
+                  data-error-empty="Please enter your message"></textarea>
+                <i class="fa fa-comment"></i>
+              </div>
+            </div><!-- End textarea -->
+            <!-- <div class="my-3">
+              <div class="loading">Loading</div>
+              <div class="error-message"></div>
+              <div class="sent-message">Your message has been sent. Thank you!</div>
+            </div> -->
+            <!-- <div class="text-center">
+              <button type="submit" class="btn btn-success">Send Message</button>
+            </div> -->
+            <div class="text-center">
+              <button type="button" class="btn btn-success btn-send text-capitalize">
+                <i class="fa fa-paper-plane me-2"></i> Send message
+              </button>
             </div>
-          </div><!-- End name input -->
-
-          <div class="form-group">
-            <label class="control-label" for="contact-mail">Email</label>
-            <div class=" controls">
-              <input id="contact-mail" name="email" placeholder="Your email" class="form-control requiredField"
-                data-new-placeholder="Your email" type="email" data-error-empty="Please enter your email"
-                data-error-invalid="Invalid email address">
-              <i class="fa fa-envelope"></i>
-            </div>
-          </div><!-- End email input -->
-
-          <div class="form-group">
-            <label class="control-label" for="contact-message">Message</label>
-            <div class="controls">
-              <textarea id="contact-message" name="comments" placeholder="Your message"
-                class="form-control requiredField" data-new-placeholder="Your message" rows="6"
-                data-error-empty="Please enter your message"></textarea>
-              <i class="fa fa-comment"></i>
-            </div>
-          </div><!-- End textarea -->
-
-          <button type="button" class="btn btn-primary btn-send text-capitalize mb-4">
-            <i class="fa fa-paper-plane"></i> Send message
-          </button>
-        </form><!-- End contact-form -->
+          </form>
+        </div>
       </div>
     </div>
   </section>
 
   <div class="line"></div>
 
-  <footer class="footer">
+  <footer class="site-footer" id="footer">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <p class="text-dark my-4 text-md font-weight-normal">
-            Copyright © <script>
-              document.write(new Date().getFullYear())
-            </script> BPSDMI
-          </p>
+        <div class="col-md-8 col-sm-6 col-xs-12">
+          <p class="copyright-text">Copyright &copy; BPSDMI</p>
+          <!-- <div class="copyright">
+                  Copyright &copy; BPSDMI
+              </div> -->
         </div>
-        <div class="col-md-6">
-          <ul class="list-inline footer-social-buttons">
-            <li>
-              <a href="#" target="_blank"> <i class="fab fa-facebook fa-2x margin"></i></a>
-              <a href="#" target="_blank"> <i class="fab fa-twitter fa-2x margin"></i></a>
-              <a href="#" target="_blank"> <i class="fab fa-telegram fa-2x margin"></i></a>
-              <a href="#" target="_blank"><i class="fab fa-youtube fa-2x margin"></i></a>
-            </li>
+
+        <div class="col-md-4 col-sm-6 col-xs-12">
+          <ul class="social-icons">
+            <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
+            <li><a class="twitter" href="#"><i class="fa fa-skype"></i></a></li>
+            <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
           </ul>
         </div>
       </div>
